<resources>
    <string name="app_name">Swastik</string>
    <string name="swastik_college">Swastik College</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="image">image</string>
    <string name="home">Home</string>

    <string name="faculty">Faculty</string>
    <string name="gallery">Gallery</string>
    <string name="programs">Programs</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="locate_us">Locate Us</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_galley_item">GalleyItemActivity</string>
    <string name="title_activity_maps">Map</string>

</resources>

